# TuringMachineEmulator

./: CMakeLists.txt  README.md  Window.cpp  Window.h  main.cpp  mario.cpp  mario.h  table.cpp  table.h
assets/: styles.qss
include/: Apparatus.h  TableWidget.h  Window.h
src/: Apparatus.cpp  TableWidget.cpp  Window.cpp  main.cpp
